# Engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTEXT.md  README.md  vcpkg.json
demo/: CMakeLists.txt
demo/src/: main.cpp
engine/: CMakeLists.txt
engine/include/engine/: Actions.h  Engine.h  Input.h  Math.h  Profiling.h  Time.h
engine/include/engine/ecs/: ComponentPool.h  Components.h  DemoWorld.h  Entity.h  Registry.h  SystemScheduler.h
engine/include/engine/ecs/systems/: AnimationSystem.h  CameraSystem.h  CollisionSystem.h  DebugUISystem.h  InputSystem.h  MovementSystem.h  PlayerControlSystem.h  RenderSystem.h  TilemapRenderSystem.h
engine/include/engine/render/: Renderer2D.h  Texture.h  TextureManager.h  Tileset.h
engine/src/: Engine.cpp  Input.cpp  Time.cpp
engine/src/ecs/: DemoWorld.cpp  Registry.cpp  SystemScheduler.cpp
engine/src/ecs/systems/: AnimationSystem.cpp  CameraSystem.cpp  CollisionSystem.cpp  DebugUISystem.cpp  InputSystem.cpp  MovementSystem.cpp  PlayerControlSystem.cpp  RenderSystem.cpp  TilemapRenderSystem.cpp
engine/src/render/: Renderer2D.cpp  TextureManager.cpp
tools/: build_tileset.py
